# wasde

./: .gitignore  CLAUDE.md  CORE_PRINCIPLES.md  PROJECT_OBJECTIVE.md  README.md  pyproject.toml
.streamlit/: config.toml
app/: Home.py  README.md  lib.py
app/pages/: 1_Vintage_Progression.py  2_Report_Month_Matrix.py  3_Bias_Explorer.py  4_Revision_Momentum.py  5_Surprise_Leaderboard.py  6_Coverage.py
config/: pipeline.yaml  qa_whitelist.yaml
config/registry/: attributes.yaml  commodities.yaml  tables.yaml  units.yaml
data/exports/: qa_exceptions.parquet  qa_report.csv  releases.parquet  us_corn_balance.parquet  us_soybeans_balance.parquet
docs/: DECISIONS.md
scripts/: 01_backfill_catalog.py  02_parse_xml_era.py  03_parse_txt_era.py  04_load_agmanager.py  05_ocr_corn_soy.py  06_reconcile.py  07_relocate_scans.py  10_update.py  12_export.py  99_qa_report.py
src/wasde_data/: __init__.py  agmanager.py  analytics.py  archive.py  config.py  db.py  esmis.py  export.py  got_ocr.py  http_cache.py  identity.py  normalize.py  paddle_ocr.py  qa.py  records.py  registry.py  update.py  vlm_ocr.py
src/wasde_data/parsers/: ocr_parser.py  txt_parser.py  xml_parser.py
tests/: conftest.py  test_agmanager.py  test_analytics.py  test_app_smoke.py  test_archive.py  test_config.py  test_db.py  test_esmis.py  test_http_cache.py  test_identity.py  test_integration.py  test_ocr_columns.py  test_qa.py  test_reconcile.py  test_registry.py  test_txt_parser.py  test_update.py  test_xml_parser.py
tests/fixtures/: esmis_page.json  wasde-06-10-2005.txt  wasde-06-12-1995.txt  wasde0626_trimmed.xml
tests/golden/: corn_2012_13_mom_expected.csv  wasde0626_us_corn_soy.csv  wasde1995_us_corn_soy.csv  wasde2005_us_corn_soy.csv
(+1 files in other folders)
